advertise/res/css/style.css
html {
  background-color: #16425B;
  padding:0;
  overflow-x:hidden;
}
body {
  margin:0;
  padding:0.5em;
  background-color: white;
  width:100vw;
  overflow-x:hidden;
}

.row {
    display: flex;
    flex-direction: row;
    padding-left:1em;
    padding-right:1em;
    margin-left:0;
    margin-right:0;
}

.col.center {
  display:flex;
  align-items:center;
  justify-content: center;
}

.col.bumper {
  width:10vw;
}

.col.flex1 {
    flex: 1;
    padding:1em;
    display:flex;
    flex-direction: column;
}

.col.flex1>img {
    max-width: 100%;
    display:block;
    box-shadow: 0 0 1em rgba(0,0,0,0.25);
}

.ctaButton {
  display:block;
  text-align:center;
  margin:1em;
  background-color: #16425B;
  padding:1em;
  color: #FFFFFF;
  font-family: "Roboto", sans-serif;
  font-size:1.25em;
  border-radius:5em;
  font-weight:bold;
}
.adTypeButton {
  display:block;
  text-align:center;
  background-color: #16425B;
  padding:0.5em;
  color: #FFFFFF;
  font-family: "Roboto", sans-serif;
  font-size:1em;
  border-radius:5em;
}

.costComponent {
  display:flex;
  flex-direction:row;
  font-family:"Roboto", sans-serif;
}

.costLabel {
  flex:2;
}
.costPrice {
  flex:1;
  font-weight:bold;
}
.totalCost {
  font-weight:bold;
}

p {
  font-family: "Roboto", sans-serif;
  font-size:1.2em;
  padding:1em;
  margin:1em;
}

h1 {
  font-size:1.75em;
  margin:-0.5em;
  padding:1em;
  width:100vw;
  margin-bottom: 0.5em;
  background-color: #16425B;
  color: white;
}

h1,h2 {
  font-family: "Roboto", sans-serif;
}

.inputRow {
  flex:1;
  display:flex;
  flex-direction: row;
  margin-top:0.5em;
}

textarea, input[type="text"], input[type="url"], input[type="email"], div.checkboxWrapper {
  flex:3;
  text-align:left;
  display:flex;
  align-items: center;
  font-size:1.25em;
  padding:1em;
  border: 1px solid #000;
}
label {
  flex:1;
  padding:1em;
  font-family: "Roboto", sans-serif;
}

@media(max-width: 768px) {
  .ctaButton {
    border-radius: 0.25em;
    padding:0.5em;
  }
  .col.bumper {
    display:none;
  }
  .col.flex1 {
    display: flex;
    flex-direction:column;
  }
  .row {
    display:block;
  }
  input[type="text"],input[type="url"], input[type="email"] {
    max-width:50%;
  }
}

